--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,12 +2,12 @@ h1 {
   color: rgba(0, 47, 255, 0.575);
 }
 #ulf {
-border: 3px solid blue;
+border: 3px solid rgb(0, 204, 255);
 width: 220px;
 color: purple;
 }
 #lal {
-border: 3px solid blue;
+border: 3px solid rgb(0, 204, 255);
 width: 220px;
 color: purple;
 }
