--- a/src/app/sabw-caesar/sabw-caesar.component.html
+++ b/src/app/sabw-caesar/sabw-caesar.component.html
@@ -1,5 +1,5 @@
 <input [ngModel]="zahl" />
-<button>dreh!</button>
+<button  (click)="dreheScheibe()">dreh!</button>
 
 <div id="container">
   <img id="scheibe"
