--- a/src/app/sabw-caesar/sabw-caesar.component.css
+++ b/src/app/sabw-caesar/sabw-caesar.component.css
@@ -6,9 +6,8 @@
 #scheibe_innen {
   width: 300px;
   position: absolute;
-  transform: rotate(318.5deg)
+  /*transform: rotate(318.46deg); */
   }
 #container {
   height: 300px;
 }
-
