--- a/src/app/sabw-caesar/sabw-caesar.component.html
+++ b/src/app/sabw-caesar/sabw-caesar.component.html
@@ -1,9 +1,9 @@
-<input [ngModel]="zahl" />
+<input [(ngModel)]="zahl" />
 <button  (click)="dreheScheibe()">dreh!</button>
 
 <div id="container">
   <img id="scheibe"
   src="https://pasoma.de/sabw/scheibegross.png" />
-  <img id="scheibe_innen"
+  <img id="scheibe_innen" [style.transform]="'rotate(318.46deg)'"
   src="https://pasoma.de/sabw/scheibeklein2.png" />
 </div>
