--- a/src/app/sabw-caesar/sabw-caesar.component.html
+++ b/src/app/sabw-caesar/sabw-caesar.component.html
@@ -4,6 +4,6 @@
 <div id="container">
   <img id="scheibe"
   src="https://pasoma.de/sabw/scheibegross.png" />
-  <img id="scheibe_innen" [style.transform]="'rotate(318.46deg)'"
+  <img id="scheibe_innen" [style.transform]="rotation"
   src="https://pasoma.de/sabw/scheibeklein2.png" />
 </div>
