--- a/src/app/sabw-caesar/sabw-caesar.component.html
+++ b/src/app/sabw-caesar/sabw-caesar.component.html
@@ -1,4 +1,6 @@
-<input [(ngModel)]="zahl" />
+<form>
+<input [(ngModel)]="zahl" name="zahl"/>
+</form>
 <button  (click)="dreheScheibe()">dreh!</button>
 
 <div id="container">
