--- a/src/app/sabw-caesar/sabw-caesar.component.css
+++ b/src/app/sabw-caesar/sabw-caesar.component.css
@@ -7,6 +7,7 @@
   width: 300px;
   position: absolute;
   /*transform: rotate(318.46deg); */
+  transition: all 2s;
   }
 #container {
   height: 300px;
