2 files modified, 2 added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,2 @@
 <app-sabw-caesar></app-sabw-caesar>
-     <h1>Verschlüsselungen</h1>
-     <ul>
-         <li id="ulf"><h2><strong>Caesar-Verschlüsselung</strong></h2><p>Diese Verschlüsselung ist nicht sehr sicher!</p></li>
-     <li id="lal"><h2><strong>One Time Pad</strong></h2><p>Aber diese Verschlüsselung ist hingegen eigentlich unknackbar!</p></li>
-    </ul>
-    <p id="lol">Mehr fällt mir gerade nicht ein <strong></strong></p>
-
+<app-fermat-test></app-fermat-test>
