--- a/src/app/sabw-caesar/sabw-caesar.component.html
+++ b/src/app/sabw-caesar/sabw-caesar.component.html
@@ -9,3 +9,9 @@
   <img id="scheibe_innen" [style.transform]="rotation"
   src="https://pasoma.de/sabw/scheibeklein2.png" />
 </div>
+    <h1>Verschlüsselungen</h1>
+     <ul>
+         <li id="ulf"><h2><strong>Caesar-Verschlüsselung</strong></h2><p>Diese Verschlüsselung ist nicht sehr sicher!</p></li>
+     <li id="lal"><h2><strong>One Time Pad</strong></h2><p>Aber diese Verschlüsselung ist hingegen eigentlich unknackbar!</p></li>
+    </ul>
+    <p id="lol">Mehr fällt mir gerade nicht ein <strong></strong></p>
