--- a/src/app/fermat-test/fermat-test.component.html
+++ b/src/app/fermat-test/fermat-test.component.html
@@ -4,7 +4,7 @@
  Versuchskaninchen <input name="Versuchskaninchen" [(ngModel)]="Versuchskaninchen"/>
   <p> </p> 
  Anzahl an Tests <input name="Testanzahl" [(ngModel)]="Testanzahl"/>
- <br /> <button>Prüfe!</button> 
+ <br /> <button (click)="fermattest()" >Prüfe!</button> 
 
 
  </form>
